--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,7 @@
         "buffer": "^6.0.3",
         "clsx": "^2.1.1",
         "framer-motion": "^11.11.10",
-        "react": "^18.3.1",
+        "react": "^19.0.0",
         "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^19.0.0",
         "react-google-recaptcha": "^3.1.0",
@@ -51,7 +51,7 @@
         "@tanstack/router-plugin": "^1.76.0",
         "@trivago/prettier-plugin-sort-imports": "^5.2.1",
         "@types/node": "^22.10.10",
-        "@types/react": "^18.3.12",
+        "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.3",
         "@typescript-eslint/eslint-plugin": "^8.19.0",
         "@typescript-eslint/parser": "^8.19.1",
@@ -65,6 +65,7 @@
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3",
         "vite": "^6.0.11",
+        "vite-tsconfig-paths": "5.1.4",
         "vite-plugin-svgr": "^4.2.0"
     }
 }
